--- a/index.html
+++ b/index.html
@@ -1,40 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+    <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <main>
+      <section class="card">
+        <div class="Orange-box">
+          <img src="./images/illustration-box-desktop.svg" alt="Orange box" />
+        </div>
+        <div class="images">
+          <img
+            class="mobile"
+            src="./images/illustration-woman-online-mobile.svg"
+            alt="woman online mobile"
+          />
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+          <img
+            src="./images/illustration-woman-online-desktop.svg"
+            alt="woman online desktop"
+            class="desktop"
+          />
+        </div>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+        <div class="card-text">
+          <h1>Faq</h1>
+          <div class="accordion">
+            <div class="accordion-item">
+              <button class="question">
+                How many team members can I invite?
+              </button>
+              <div class="collapse">
+                <div class="content">
+                  You can invite up to 2 additional users on the Free plan.
+                  There is no limit on team members for the Premium plan.
+                </div>
+              </div>
+            </div>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+            <div class="accordion-item">
+              <button class="question">
+                What is the maximum file upload size?
+              </button>
+              <div class="collapse">
+                <div class="content">
+                  No more than 2GB. All files in your account must fit your
+                  allotted storage space.
+                </div>
+              </div>
+            </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+            <div class="accordion-item">
+              <button class="question">How do I reset my password?</button>
+              <div class="collapse">
+                <div class="content">
+                  Click “Forgot password” from the login page or “Change
+                  password” from your profile page. A reset link will be emailed
+                  to you.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <button class="question">Can I cancel my subscription?</button>
+              <div class="collapse">
+                <div class="content">
+                  Yes! Send us a message and we’ll process your request no
+                  questions asked.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <button class="question">
+                Do you provide additional support?
+              </button>
+              <div class="collapse">
+                <div class="content">
+                  Chat and email support is available 24/7. Phone lines are open
+                  during normal business hours.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/Paciott">Paciott</a>.
+    </footer>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
